# mybot

./: .env.example  .gitignore  README.md  __init__.py  bus.py  cli.py  config.py  context.py  events.py  loop.py  pyproject.toml  runner.py  session.py
notes/: architecture-decisions.md
providers/: __init__.py  base.py  openai_compat.py
tests/: test_config.py  test_filesystem_tools.py  test_openai_compat.py  test_patch_tool.py  test_runner.py  test_search_tools.py  test_session.py  test_shell_tool.py
tools/: __init__.py  base.py  filesystem.py  patch.py  registry.py  search.py  shell.py
