[project]
name = "mybot"
version = "0.1.0"
description = "A minimal bot runtime inspired by nanobot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "asus" }
]
dependencies = [
    "openai>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    ".",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
